// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`script transform > computed 1`] = `
"export default {
  
  data() {
    return {
      nickname: 'nickname'
    };
  },
  computed: {
    name() {
      return nickname.value;
    },
    age() {
      return 18;
    }
  }
,
  created() {




}}"
`;

exports[`script transform > cssVars 1`] = `
"export default {
  
  data() {
    return {
      a: '1px',
      b: 2
    };
  }
,
  created() {



}}"
`;

exports[`script transform > imports 1`] = `
"import img from './img.webp';
import Component from './Component.vue';
import { Checkbox } from 'ant-design-vue';

export default {
  created() {

}}"
`;

exports[`script transform > life cycles hooks 1`] = `
"export default {
  
  data() {
    return {
      a: 1
    };
  },
  mounted() {
    a.value = 2;
  },
  destroyed() {
    a.value = 3;
  }
,
  created() {





}}"
`;

exports[`script transform > macros 1`] = `
"export default {
  ...{
    name: 'Component',
    inheritAttrs: false,
},
  props: {
    a: { type: Number, required: false }
  },
  created() {





}}"
`;

exports[`script transform > methods 1`] = `
"export default {
  
  data() {
    return {
      nickname: 'nickname'
    };
  },
  computed: {
    name() {
      return nickname.value;
    },
    age() {
      return 18;
    }
  },
  methods: {
    changeName() {
      nickname.value = 'new nickname';
    },
    changeAge() {
      age.value = 20;
    }
  }
,
  created() {








}}"
`;

exports[`script transform > ref 1`] = `
"export default {
  
  data() {
    return {
      nickname: 'nickname',
      avatar: img,
      visible: false,
      data: {
        a: 1
      },
      a: {
        a: 1
      }
    };
  }
,
  created() {






let b = 1
}}"
`;

exports[`script transform > watch 1`] = `
"export default {
  
  data() {
    return {
      nickname: 'nickname',
      info: {
        a: 1
      }
    };
  },
  computed: {
    name() {
      return nickname.value;
    },
    age() {
      return info.a;
    }
  },
  watch: {
    nickname: {
      handler() {
        console.log('a changed');
        info.a++;
      },
      immediate: true,
      deep: true
    },
    \\"info.a\\": {
      handler() {
        console.log('a changed');
        info.a++;
      },
      immediate: true,
      deep: true
    },
    age: {
      handler() {
        console.log('a changed');
        info.a++;
      },
      immediate: true,
      deep: true
    }
  }
,
  created() {













}}"
`;
